--- a/deep-learning.html
+++ b/deep-learning.html
@@ -96,7 +96,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -179,7 +179,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -202,7 +202,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -220,7 +220,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -262,7 +262,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... the hottest state of the art fields: Deep Learning, Artificial Intelligence, and 
 Autonomous Vehicles. If you're a creative and autonomous computer scientist 
@@ -354,7 +354,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 You have strong mathematical foundation in machine learning and deep learning
 .</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-17</p>
 <hr/>
@@ -364,7 +364,7 @@ You have strong mathematical foundation in machine learning and deep learning
 Applications team: With Deep Learning, we can teach AI to do almost anything,
 and GPUs?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/C09F877A45?viewed=true'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/C09F877A45?viewed=true'>Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 5, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
@@ -390,7 +390,7 @@ Skills at Crisalix.</p>
 <p>6 days ago ... Compute Performance Developer Technology Intern - CUDA | US, CA, Santa 
 Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
@@ -414,7 +414,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -452,7 +452,7 @@ from?...</p>
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills - Barcelona at Crisalix.</p>
@@ -482,7 +482,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
